styles/interests.css
* {
  box-sizing: border-box;
}

body {
  font-family: "Lato", sans-serif;
  margin: 0;
  padding: 0;
  background-color: #EAEAE1;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23FDFEEB' stroke-width='10' %3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
}

/* General wrapper styling */
.article__wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  gap: 20px;
  padding: 20px;
}

.article__item {
  border-radius: 8px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s, box-shadow 0.3s;
  overflow: hidden;
  background-color: #EAEAE1;
}

.article__item:hover {
  transform: translateY(-10px);
  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
}

.article__image-wrapper {
  width: 100%;
  height: 300px;
  text-align: center;
  padding: 15px;
  background-color: #EAEAE1;
}

.article__image-wrapper img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  width: 100%;
  border-radius: 8px 8px 0 0;
  filter: sepia(100%);
}

.article__image-wrapper .filter-normal {
  filter: none;
}

.article__text {
  padding: 20px;
  font-size: 1rem;
  line-height: 1.6;
  color: #333;
}

.article__text h2 {
  font-size: 1.5rem;
  margin-bottom: 10px;
  font-weight: bold;
  text-transform: uppercase;
}

.article__text p {
  margin-bottom: 15px;
  word-break: break-all;
  color: dimgray;
}

@media (max-width: 768px) {
  .article__wrapper {
    grid-template-columns: 1fr 1fr;
  }
}

/* Small Mobile */
@media only screen and (max-width: 480px) {
  .article__wrapper {
    grid-template-columns: 1fr;
  }
}

